--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,16 @@
 beautifulsoup4==4.8.1
+config==0.4.2
+dj-database-url==0.5.0
 Django==2.2.7
 django-bootstrap4==1.0.1
+django-fontawesome==1.0
+django-heroku==0.3.1
+django-tinymce==2.8.0
+Pillow==6.2.1
+psycopg2==2.8.4
+python-decouple==3.1
 pytz==2019.3
+PyYAML==5.1.2
 soupsieve==1.9.5
 sqlparse==0.3.0
+whitenoise==4.1.4
