--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ django-bootstrap4==1.0.1
 django-fontawesome==1.0
 django-heroku==0.3.1
 django-tinymce==2.8.0
+gunicorn==20.0.0
 Pillow==6.2.1
 psycopg2==2.8.4
 python-decouple==3.1
